fix layour break on xs device

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -273,7 +273,7 @@ Style for how many columns in different media device
 }
 
 
-@media (max-width: 350.98px) {
+@media (max-width: 407.98px) {
   .navbar-brand-top {
     display: none;
   }
